-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Consolidate load and store of flat inline types. This also fixes some issues I theorycrafted with regards to atomic load/stores. I split this from my work on JDK-8349110.
- relates to
-
JDK-8349110 [lworld] Intrinsics for Unsafe.get/putFlatValue
-
- Resolved
-
-
JDK-8357612 [lworld] Improper layout computation of classes with empty value field
-
- Closed
-
- links to
-
Commit(lworld)
openjdk/valhalla/64ee2e2b
-
Review(lworld)
openjdk/valhalla/1470