8357474: [lworld] Consolidate load/store flat inline types

Reviewed-by: thartmann