src/hotspot/share/opto/parse2.cpp
@@ -22,6 +22,7 @@
  *
  */
 
+#include "ci/ciInlineKlass.hpp"
 #include "ci/ciMethodData.hpp"
 #include "ci/ciSymbols.hpp"
 #include "classfile/vmSymbols.hpp"
@@ -114,25 +115,9 @@ void Parse::array_load(BasicType bt) {
       sync_kit(ideal);
       if (!array_type->is_not_flat()) {
         if (element_ptr->is_inlinetypeptr()) {
-          // Element type is known, cast and load from flat array layout.
           ciInlineKlass* vk = element_ptr->inline_klass();
-          bool is_null_free = array_type->is_null_free() || !vk->has_nullable_atomic_layout();
-          bool is_not_null_free = array_type->is_not_null_free() || (!vk->has_atomic_layout() && !vk->has_non_atomic_layout());
-          if (is_null_free) {
-            // TODO 8350865 Impossible type
-            is_not_null_free = false;
-          }
-          bool is_naturally_atomic = (is_null_free && vk->nof_declared_nonstatic_fields() <= 1);
-          bool may_need_atomicity = !is_naturally_atomic && ((!is_not_null_free && vk->has_atomic_layout()) || (!is_null_free && vk->has_nullable_atomic_layout()));
-
-          // Re-execute flat array load if buffering triggers deoptimization
-          PreserveReexecuteState preexecs(this);
-          jvms()->set_should_reexecute(true);
-          inc_sp(3);
-
-          adr = flat_array_element_address(array, array_index, vk, is_null_free, is_not_null_free, may_need_atomicity);
-          int nm_offset = is_null_free ? -1 : vk->null_marker_offset_in_payload();
-          Node* vt = InlineTypeNode::make_from_flat(this, vk, array, adr, array_index, nullptr, 0, may_need_atomicity, nm_offset);
+          Node* flat_array = cast_to_flat_array(array, vk, false, false, false);
+          Node* vt = InlineTypeNode::make_from_flat_array(this, vk, flat_array, array_index);
           ideal.set(res, vt);
         } else {
           // Element type is unknown, and thus we cannot statically determine the exact flat array layout. Emit a
@@ -282,14 +267,7 @@ void Parse::array_store(BasicType bt) {
 
           if (vk != nullptr) {
             // Element type is known, cast and store to flat array layout.
-            bool is_null_free = array_type->is_null_free() || !vk->has_nullable_atomic_layout();
-            bool is_not_null_free = array_type->is_not_null_free() || (!vk->has_atomic_layout() && !vk->has_non_atomic_layout());
-            if (is_null_free) {
-              // TODO 8350865 Impossible type
-              is_not_null_free = false;
-            }
-            bool is_naturally_atomic = (is_null_free && vk->nof_declared_nonstatic_fields() <= 1);
-            bool may_need_atomicity = !is_naturally_atomic && ((!is_not_null_free && vk->has_atomic_layout()) || (!is_null_free && vk->has_nullable_atomic_layout()));
+            Node* flat_array = cast_to_flat_array(array, vk, false, false, false);
 
             // Re-execute flat array store if buffering triggers deoptimization
             PreserveReexecuteState preexecs(this);
@@ -300,9 +278,8 @@ void Parse::array_store(BasicType bt) {
               assert(_gvn.type(stored_value_casted) == TypePtr::NULL_PTR, "Unexpected value");
               stored_value_casted = InlineTypeNode::make_null(_gvn, vk);
             }
-            adr = flat_array_element_address(array, array_index, vk, is_null_free, is_not_null_free, may_need_atomicity);
-            int nm_offset = is_null_free ? -1 : vk->null_marker_offset_in_payload();
-            stored_value_casted->as_InlineType()->store_flat(this, array, adr, array_index, vk, 0, may_need_atomicity, nm_offset, MO_UNORDERED | IN_HEAP | IS_ARRAY);
+
+            stored_value_casted->as_InlineType()->store_flat_array(this, flat_array, array_index);
           } else {
             // Element type is unknown, emit a runtime call since the flat array layout is not statically known.
             store_to_unknown_flat_array(array, array_index, stored_value_casted);
